fixed gap

--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -1060,7 +1060,7 @@
         width: 100%;
   
         .slide {
-          background-position: 80%;
+          background-position: 30%;
           background-repeat: no-repeat;
           background-size: cover;
         }
